--- a/client/android/app/src/main/res/values-night/colors.xml
+++ b/client/android/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">#ffffff</color>
-    <color name="splash">#141414</color>
+    <color name="splash">#ffffff</color>
 </resources>
